WEBUI，重构并整合在一个web文件夹中，所有主题使用同一个main.js，旧pr已关闭

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -90,3 +90,8 @@ temperature = 0.0                           # Controls randomness for vision mod
 #cpu_limit = 2.0
 #timeout = 300
 #network_enabled = true
+
+# Server configuration
+[server]
+host = "127.0.0.1"  # 服务器监听的主机地址
+port = 5172         # 服务器监听的端口
